# wio-lite-ai

./: .CMakeLists.txt.swp  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  HANDOFF.md  LICENSE  README.md
.claude/: settings.json
.claude/skills/codex-debug/: SKILL.md
.claude/skills/codex-review/: SKILL.md
app/: app.h  erpc.c  erpc.h  fault.c  iwdg.c  iwdg.h  main.c  malloc_lock.c  mpu.c  psram.c  psram.h  retarget.c  rtl8720.c  rtl8720.h  rtl8720_flash.c  rtl8720_flash.h  rtl8720_img.c  rtl8720_img.h  tusb_config.h  usb_cdc.c  usb_descriptors.c  wifi_rpc.c  wifi_rpc.h
boot/: README.md  clock.c  dfu_callbacks.c  main.c  octospi.c  octospi.h  ospi_ram.c  ospi_ram.h  phase2_config_dump.md  tusb_config.h  usb_descriptors.c
bootrom/: clock.c  dfu_callbacks.c  main.c  octospi.c  octospi.h  tusb_config.h  usb_descriptors.c
cmake/: arm-none-eabi-toolchain.cmake  cli_version.h.in
fw/rtl8720/: README.md  build.sh  gate.py
fw/rtl8720/patches/: 0001-n2-bounded-socket-handlers.patch  0002-n2-system-version-build-id.patch  README.md
ldscript/: STM32H725AEIx_ROM.ld  STM32H725AEIx_XIP.ld
port/coremark/: core_portme.c  core_portme.h
port/threadx/: tx_glue.c  tx_glue.h  tx_user.h
scripts/: bin2uf2.py
shell/backend/: cli_backend_dummy.c  cli_backend_dummy.h  cli_backend_usbcdc.c  cli_backend_usbcdc.h  cli_uart_ring.h
shell/cmds/: cmd_builtin.c  cmd_coremark.c  cmd_crash.c  cmd_devmem.c  cmd_dmesg.c  cmd_free.c  cmd_jobs.c  cmd_membench.c  cmd_net.c  cmd_psram.c  cmd_sleep.c  cmd_system.c  cmd_thread.c  cmd_watch.c  cmd_wdt.c  cmd_wifi.c  cmd_xfer.c  cmd_xfer.h  rtl_link.c  rtl_link.h
shell/core/: cli_complete.c  cli_core.c  cli_edit.c  cli_history.c  cli_internal.h  cli_job.c  cli_parse.c  cli_printf.c  cli_session.c  cli_vt100.h
shell/include/: cli.h  cli_config.h  cli_instance.h
shell/test/: host_glue.c  host_glue.h  host_sections.ld  run_host_tests.sh  test_complete.c  test_core.c  test_edit.c  test_history.c  test_integration.c  test_output.c  test_parse.c  test_registration.c  test_uart_ring.c  test_ymodem.c  test_ymodem_recv.c
shell/test/shim/: tx_api.h
src/: main.c  system_stm32h7xx.c
svc/: fmt.c  fmt.h  log.c  log.h  timebase.c  timebase.h  ymodem.c  ymodem.h
